--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -78,6 +78,8 @@
 @media screen and (min-width: 768px) {
   .container.clients {
     width: 100%;
+    overflow-x: hidden; /*для горизонтального*/
+    overflow: hidden;
   }
 
   .our-clients-list-item {
@@ -85,7 +87,7 @@
     height: 90px;
     margin-bottom: 30px;
     margin-right: 30px;
-    // overflow: hidden;
+    overflow: hidden;
 
     &:nth-child(3n) {
       margin-right: 0;
